--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,9 +12,9 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">cloud</a></li>
-        <li><a href="#">pie</a></li>
-        <li><a href="#">list</a></li>
+        <li><a href="/cloud">cloud</a></li>
+        <li><a href="/pie">pie</a></li>
+        <li><a href="/list">list</a></li>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
