add CSS for table container

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,11 @@
   padding-bottom: 30px;
 }*/
 
+#table_container {
+  margin-right: 20%;
+  margin-left: 20%;
+}
+
 .theme-dropdown .dropdown-menu {
   position: static;
   display: block;
