--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,7 @@
         <li><a href="/cloud">cloud</a></li>
         <li><a href="/pie">pie</a></li>
         <li><a href="/list">list</a></li>
+        <li><a href="/polarity">polarity</a></li>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
